--- a/cronometer.html
+++ b/cronometer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>heloo</title>
+    <title>cronometer</title>
     <script src="cronometer.js"></script>
 </head>
 <body>
